php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #64962 imagerotate produce corrupted image
Submitted: 2013-06-03 12:59 UTC Modified: 2013-06-03 12:59 UTC
From: remi@php.net Assigned: remi (profile)
Status: Closed Package: GD related
PHP Version: 5.5.0RC2 OS: GNU/Linux
Private report: No CVE-ID: None
 [2013-06-03 12:59 UTC] remi@php.net
Description:
------------
Upstream GD bug #67
https://bitbucket.org/libgd/gd-libgd/issue/67/problem-with-gdrotate


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2013-06-03 12:59 UTC] remi@php.net
-Assigned To: +Assigned To: remi
 [2013-06-03 13:02 UTC] remi@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=3579e81200927b75b2c5f353e016ec26d8884c26
Log: Fixed Bug #64962 	imagerotate produce corrupted image
 [2013-06-03 13:02 UTC] remi@php.net
-Status: Assigned +Status: Closed
 [2013-11-17 09:31 UTC] laruence@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=3579e81200927b75b2c5f353e016ec26d8884c26
Log: Fixed Bug #64962 	imagerotate produce corrupted image
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC